--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -12,4 +12,10 @@ body{
 }
 *{
     box-sizing: border-box;
+    margin:0;
+    padding: 0;
+}
+:root{
+    --default-layout-header-height:60px;
+    --default-layout-width:1150px;
 }
