--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -18,4 +18,13 @@ body{
 :root{
     --default-layout-header-height:60px;
     --default-layout-width:1150px;
+    --black:#000;
+    --primary:#FE2C55;
+}
+button,input,[tabindex]{
+    border: none;
+    outline: none;
+}
+a{
+    text-decoration: none;
 }
