--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -54,6 +54,9 @@
 
 }
 
+.search-result, .search{
+    width: 361px;
+}
 .clear,
 .loading{
    position: absolute;
@@ -83,4 +86,10 @@
         background-color:rgba(22,24,35,0.06);
     }
    
+}
+.search-title{
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    color:rgba(22,24,35,0.5);
+    font-weight: 600;
 }
