--- a/src/Layout/components/Button/Button.module.scss
+++ b/src/Layout/components/Button/Button.module.scss
@@ -16,11 +16,47 @@
         opacity: 0.5;
     }
 }
-
+.rounded{
+    border-radius: 999px;
+    box-shadow: 0 2px 8px rgb( 0 0 0 / 6%);
+    border-color: rgba(22,24,35,0.12);
+    &:hover{
+        border-color: rgba(22,24,35,0.2);
+        background-color: rgba(22,24,35,0.3);
+    }
+}
 .primary{
     color: white;
     background-color: var(--primary);
     &:hover{
        background-color: rgba(234, 40, 78, 1);
+       border-color:  rgba(234, 40, 78, 1);
     }
+}
+.outline{
+    color: var(--primary);
+    border-color: var(--primary);
+    &:hover{
+        background-color: rgba(254,44,85,0.06);
+        border-color: currentColor;
+    }
+}
+.text{
+    &:hover{
+       text-decoration: underline;
+    }
+}
+
+.icon + .title,
+.title + .icon{
+    margin-left: 8px;
+}
+//button sizes
+.small{
+    min-width: 88px;
+    padding: 4px 16px;
+}
+.large{
+    padding: 14px 16px;
+    min-width: 140px;
 }
