--- a/src/Layout/components/Button/Button.module.scss
+++ b/src/Layout/components/Button/Button.module.scss
@@ -4,6 +4,7 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
+    color:var(--black);
     cursor: pointer;
     background-color: white;
     border: 1px solid transparent;
