--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -18,6 +18,7 @@ body{
 :root{
     --default-layout-header-height:60px;
     --default-layout-width:1150px;
+    --default-layout-horizontal-spacer: 24px;
     --black:#000;
     --primary:#FE2C55;
 }
