--- a/src/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -2,12 +2,13 @@
     display: flex;
     justify-content: center;
     width: 100%;
-
+    margin: 0 var(--default-layout-horizontal-spacer);
 }
 .container{
     width: var(--default-layout-width);
     background-color: #999;
     display: flex;
+   
 }
 .content{
     flex: 1;
