--- a/src/Layout/Popper/Menu/Menu.module.scss
+++ b/src/Layout/Popper/Menu/Menu.module.scss
@@ -1,8 +1,11 @@
 .menu-lists{
     width: 224px;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12), 
+            0 1px 2px rgba(0, 0, 0, 0.08);
     .menu-item{
         margin-left: 0;
     }
+
 }
 .menu-item{
     width: 100%;
@@ -14,6 +17,7 @@
     &:hover{
         background-color: rgba(22,24,35,0.03);
     }
+    
 }
 .menu-popper{
 padding-bottom: 8px;
@@ -38,4 +42,8 @@ padding-bottom: 8px;
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+.separate{
+        border-top: 1px solid rgba(22,24,35,0.12);
 }
