--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -106,3 +106,56 @@
     background-color: transparent;
     cursor: pointer;
 }
+.action{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.action-btn{
+    font-size: 2.6rem;
+    color: #161823;
+    background-color: transparent;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+.user-avartar{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 12px;
+    cursor: pointer;
+   
+}
+// body{
+//     .tippy-box{
+//     border-radius: 8px;
+//     font-size:1.6rem;
+//     line-height: 2.2rem;
+//     background-color: rgba(84,84,84,0.92);
+
+//     }
+//     .tippy-arrow{
+//     color:rgba(84,84,84,0.92);
+//     }
+//     .tippy-content{
+//     padding: 8px 9px;
+//     }   
+// }
+:global(.tippy-box) {
+  border-radius: 8px;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  background-color: rgba(84, 84, 84, 0.92);
+}
+
+:global(.tippy-arrow) {
+  color: rgba(84, 84, 84, 0.92);
+}
+
+:global(.tippy-content) {
+  padding: 8px 9px;
+}
+:global(.tippy-box[data-placement^='bottom'] > .tippy-arrow) {
+  top: -1px;
+}
