--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -1,11 +1,11 @@
 @import "normalize.css";
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
 
 html{
     font-size: 62.5%;  //10px 
 }
 body{
-    font-family: 'IBM Plex Sans', san-serif;
+    font-family: 'TikTokFont', san-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -28,4 +28,28 @@ button,input,[tabindex]{
 }
 a{
     text-decoration: none;
+}
+
+@font-face {
+    font-family: TikTokFont;
+    src: url('../assets/fonts/TikTokFont-Regular.woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: TikTokFont;
+    src: url('../assets//fonts/TikTokFont-Semibold.woff2');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: TikTokFont;
+    src: url('../assets//fonts/TikTokFont-Bold.woff2');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: TikTokDisplayFont;
+    src: url('../assets/fonts/TikTokDisplayFont-Bold.woff2');
+    font-weight: 700;
 }
