--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -117,6 +117,25 @@
     background-color: transparent;
     padding: 4px 12px;
     cursor: pointer;
+    margin-bottom: -7px;
+    position: relative;
+}
+
+.number-msg{
+    
+    color: #fff;
+   
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+   padding: 1px 5px;
+    font-size: 14px;
+    background-color: var(--primary);
+    border-radius: 999px;
+    position: absolute;
+    top:0;
+    right:0;
+
 }
 .user-avartar{
     width: 32px;
@@ -127,6 +146,7 @@
     cursor: pointer;
    
 }
+
 // body{
 //     .tippy-box{
 //     border-radius: 8px;
