--- a/src/Layout/components/Search/Search.module.scss
+++ b/src/Layout/components/Search/Search.module.scss
@@ -48,8 +48,16 @@
     transform: translateY(-50%);
     right: calc(var(--search-button-width) + 16px);
 }
-
-
+.loading{
+    animation: spinner 1s linear infinite;
+}
+@keyframes spinner{
+    from{
+        transform: translateY(-50%) rotate(0);
+    }to{
+        transform: translateY(-50%) rotate(360);
+    }
+}
 
 .search-btn{
     width: 52px;
