--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -19,6 +19,7 @@ body{
     --default-layout-header-height:60px;
     --default-layout-width:1150px;
     --default-layout-horizontal-spacer: 24px;
+    --font-family:'TikTokFont', san-serif;
     --black:#000;
     --primary:#FE2C55;
 }
