--- a/src/Layout/components/Search/Search.module.scss
+++ b/src/Layout/components/Search/Search.module.scss
@@ -11,6 +11,7 @@
     position: relative;
     input{
        background-color: transparent;
+       font-family: var(--font-family);
        flex:1;
        font-size: 1.6rem;
        color: var(--black);
