--- a/src/Layout/Popper/Menu/Menu.module.scss
+++ b/src/Layout/Popper/Menu/Menu.module.scss
@@ -22,12 +22,16 @@
 .menu-popper{
 padding-bottom: 8px;
 }
+.menu-body{
+    overflow-y: auto;
+}
 
 // header
 .header{
     height: 50px;
     margin-top: -8px;
     position: relative;
+    flex-shrink: 0;
 }
 
 .back-btn{
