--- a/src/Layout/components/Header/Header.module.scss
+++ b/src/Layout/components/Header/Header.module.scss
@@ -1,5 +1,9 @@
 .wrapper{
     height: var(--default-layout-header-height);
+    position: fixed;
+    top:0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
     width: 100%;
