--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -12,6 +12,7 @@
     input{
        background-color: transparent;
        font-family: var(--font-family);
+       padding-right: 40px;
        flex:1;
        font-size: 1.6rem;
        color: var(--black);
