--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,7 +6,8 @@
 }
 .container{
     width: var(--default-layout-width);
-    background-color: #999;
+    max-width: 100%;
+   
     display: flex;
    margin-top: var(--default-layout-header-height);
     height: 2000px;
